# nullvalue

./: README.md  README.rst  pyproject.toml
nullval/: __init__.py  lagrange_interpolation.py  linear_interpolation.py  loader.py  multivariate_interpolation.py  polynomial_interpolation.py  rough.py  spline_interpolation.py  trigonometric_interpolation.py
tests/: test_lagrange_interpolation.py  test_linear_interpolation.py  test_nullval.py  test_polynomail_interpolation.py  test_spline_interpolation.py  test_trigonometric_interpolation.py
